--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
 
 
+    //implementation 'com.google.android.gms:play-services-auth:11.6.2'
+    //implementation 'com.facebook.android:facebook-login:[4,5)'
+    //implementation 'com.facebook.android:facebook-login:latest.release'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
