--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,26 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Bookstorming"
         android:usesCleartextTraffic="true">
+        <receiver
+            android:name=".broadCastRece"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.BATTERY_CHANGED"/>
+                <action android:name="android.intent.action.BATTERY_LOW"/>
+                <action android:name="android.intent.action.BATTERY_OKAY"/>
+                <action android:name="android.intent.action.AIRPLANE_MODE"/>
+                <action android:name="android.intent.action.ACTION_POWER_CONNECTED" />
+                <action android:name="android.intent.action.ACTION_POWER_DISCONNECTED" />
+            </intent-filter>
+        </receiver>
         <activity
             android:name=".DetailActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,21 +41,25 @@
             </intent-filter>
         </activity>
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".TabHostActivity"></activity>
-        <activity android:name=".RealReviewActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity
+            android:name=".TabHostActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Bookstorming" />
+        <activity android:name=".RealReviewActivity" />
         <activity
             android:name=".LoginActivity2"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity android:name=".ChatActivity_review" />
         <activity android:name=".StartActivity_review" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".StartActivity" />
         <activity android:name=".RegisterActivity2" />
-        <activity android:name=".GalleryActivity"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".GalleryActivity"
+            android:exported="true" />
+        <activity android:name=".ThemeUtil" />
+
     </application>
 
 </manifest>
